--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.30.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
