--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2",
-    "server": "^1.0.38",
+    "serve": "^14.2.1",
     "styled-components": "^5.3.11",
     "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4",
