--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "serve dist -s -n -L -p $PORT",
+    "start": "serve build -s -n -L -p $PORT",
     "dev": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
