--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.25.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
