--- a/package.json
+++ b/package.json
@@ -16,21 +16,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
-    "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-date-range": "^1.4.0",
-    "react-datepicker": "^4.25.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
-    "react-multi-date-picker": "^4.1.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.7.4",
     "react-table": "^7.8.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
@@ -38,8 +33,7 @@
     "serve": "^14.2.1",
     "styled-components": "^5.3.11",
     "uninstall": "^0.0.0",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "serve build -s -n -L -p $PORT",
