--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-timeago": "^7.2.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2",
